RESOLVED FIXED288055
[WebDriver] Fix switch_to_frame integer id parameter checks
https://bugs.webkit.org/show_bug.cgi?id=288055
Summary [WebDriver] Fix switch_to_frame integer id parameter checks
Lauro Moura
Reported 2025-02-19 20:54:02 PST
Test case: imported/w3c/webdriver/tests/classic/switch_to_frame/switch_number.py::test_frame_id_number_index_out_of_bounds[65535] Currently, `Session::switchToFrame` has an assertion to check the boundary limits of an integer frame id parameter, which causes the whole WebDriver service to crash if out of range. According to the spec, we should return `invalid argument` instead: https://w3c.github.io/webdriver/#switch-to-frame > If id is less than 0 or greater than 2^16 – 1, return error with error code invalid argument. Patch incoming.
Attachments
Lauro Moura
Comment 1 2025-02-19 20:58:33 PST
EWS
Comment 2 2025-02-20 07:22:33 PST
Committed 290706@main (1b1b6513f5e6): <https://commits.webkit.org/290706@main> Reviewed commits have been landed. Closing PR #40948 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-02-20 07:23:15 PST
Note You need to log in before you can comment on or make changes to this bug.