[WebDriver] Fix switch_to_frame integer id parameter checks https://bugs.webkit.org/show_bug.cgi?id=288055

Reviewed by Carlos Garcia Campos.

Replace assertion with a regular if check, to avoid the WebDriver
service crashing with assertions enabled when getting an frame number
out of range.

According to the spec, we should return `invalid argument` instead:

* Source/WebDriver/Session.cpp:
(WebDriver::Session::switchToFrame):

Canonical link: https://commits.webkit.org/290706@main